docs/apim/4.11/hybrid-installation-and-configuration-guides/next-gen-cloud/kubernetes/openshift.md
---
description: Install a hybrid API Management 4.11 Gateway on OpenShift and connect it to Gravitee Cloud. Follow the steps to deploy it.
metaLinks:
  alternates:
    - openshift.md
---

# OpenShift

## Overview

This guide explains how to install and connect a Hybrid Gateway to Gravitee Cloud using OpenShift.

{% hint style="warning" %}
This installation guide is for only development and quick start purposes. Do not use it for production environments. For more information about best practices for production environments, contact your Technical Account Manager.
{% endhint %}

## Prerequisites

Before you install a Hybrid Gateway, complete the following steps:

* [#prepare-your-installation](../#prepare-your-installation "mention")

## Install the Gateway

{% hint style="info" %}
To deploy APIM with OpenShift, you must be running **OpenShift version 3.10 or later**. This is required because the Gravitee Helm Chart only supports Ingress standard objects. It does not support the specific OpenShift Routes.
{% endhint %}

When deploying APIM within OpenShift, you must:

* Use the full host domain instead of paths for all components. Ingress paths are not sufficiently supported by OpenShift.
* Set the `ingressClassName` to "none" for OpenShift to automatically create Routes from Ingress.

Here is a standard `values.yaml` to deploy the Gravitee APIM Gateway into OpenShift:

```yaml
openshift:
  enabled: true
  
gateway:
  replicaCount: 1
  image:
    repository: graviteeio/apim-gateway
    tag: <add_the_gateway_tag> #The gateway version to install. It has to align with the control plane of your Gravitee Cloud
    pullPolicy: IfNotPresent
  autoscaling:
    enabled: false
  podAnnotations:
    prometheus.io/path: /_node/metrics/prometheus
    prometheus.io/port: "18082"
    prometheus.io/scrape: "true"
  env:
    - name: gravitee_cloud_token
      value: "${your-cloud-token}"
  services:
    metrics:
      enabled: true
      prometheus:
        enabled: true
    core:
      http:
          enabled: true
    sync:
      kubernetes:
        enabled: false
    bridge:
      enabled: false
  resources:
    limits:
      cpu: 500m
      memory: 1024Mi
    requests:
      cpu: 200m
      memory: 1024Mi
  ingress:
    ingressClassName: none
    path: /
    hosts:
      - ${gateway_hostname}.xxxx.xx.openshiftapps.com
    annotations:
      route.openshift.io/termination: edge
  securityContext: null
  deployment:
    securityContext:
      runAsUser: null
      runAsGroup: null
      runAsNonRoot: true
      allowPrivilegeEscalation: false
      capabilities:
        drop: ["ALL"]
      seccompProfile:
        type: RuntimeDefault
  reporters:
    file:
      enabled: false
  terminationGracePeriod: 50
  gracefulShutdown:
    delay: 20
    unit: SECONDS

api:
    enabled: false

ratelimit:
    type: none

portal:
    enabled: false

ui:
    enabled: false

alerts:
    enabled: false

es:
    enabled: false

license:
    key: "${your-license-key}"
```

* Replace `${your-cloud-token}` with your Cloud Token from Gravitee Cloud
* Replace `${gateway_hostname}` with your specific hostname for the Gravitee Gateway
* Replace `${your-license-key}` with your Gravitee License from Gravitee Cloud
* Replace `<add_the_gateway_tag>` with the gateway version to install. It has to align with the control plane of your Gravitee Cloud.

## Verification

From the Gravitee Cloud Dashboard, you can see your configured Gateway.

<figure><img src="../../../.gitbook/assets/gravitee-cloud-verification-dashboard.png" alt="The Gravitee Cloud Overview with the Gateways table highlighted, showing two hybrid Gateways in the Development environment."><figcaption></figcaption></figure>

To verify that the Gateway is running, make a GET request to the URL on which you have published the Gateway. The output is a default message similar to:

```
No context-path matches the request URI.
```

You can now create and deploy APIs to your hybrid Gateway.

## Proxy configuration

To route Gateway traffic through a corporate proxy (for example, for backend API calls or JWKS retrieval from external identity providers like Microsoft Entra ID), add the following `gravitee_system_proxy_*` environment variables to the Gateway section of your `values.yaml`:

```yaml
gateway:
  env:
    - name: gravitee_system_proxy_enabled
      value: "true"
    - name: gravitee_system_proxy_type
      value: "HTTP"
    - name: gravitee_system_proxy_host
      value: "<proxy-host>"
    - name: gravitee_system_proxy_port
      value: "<proxy-port>"
    - name: gravitee_system_proxy_https_host
      value: "<proxy-host>"
    - name: gravitee_system_proxy_https_port
      value: "<proxy-port>"
```

For the full configuration reference including proxy authentication and `gravitee.yml` equivalents, see [Configure Helm values](../../proxy-configuration/system-proxy-for-backend-apis.md#configure-helm-values). For an overview of all proxy methods, see [Proxy Configuration](../../proxy-configuration/README.md).
